--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group ext.group
@@ -10,3 +11,12 @@ dependencies {
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.13.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = false
+    }
+}
+
+check.dependsOn jacocoTestReport
