--- a/service/build.gradle
+++ b/service/build.gradle
@@ -11,8 +11,7 @@ sourceCompatibility = 1.8
 dependencies {
     implementation 'org.takes:takes:1.16'
     implementation 'commons-io:commons-io:2.6'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.8'
-    testImplementation project(':lib')
+    testImplementation 'com.nikialeksey:nullfree:0.0.2'
     testImplementation project(':plugin')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
