--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ sudo: false # faster builds
 before_install:
  - chmod +x gradlew
 
+script:
+  - ./gradlew nullfree check
+
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
