--- a/service/build.gradle
+++ b/service/build.gradle
@@ -3,14 +3,15 @@ plugins {
     id 'application'
 }
 
-group ext.group
-version ext.version
+group = ext.group
+version = ext.version
 
 sourceCompatibility = 1.8
 
 dependencies {
     implementation 'org.takes:takes:1.16'
     implementation 'commons-io:commons-io:2.6'
+    implementation 'org.xerial:sqlite-jdbc:3.27.2.1'
     testImplementation 'com.nikialeksey:nullfree:0.0.2'
     testImplementation project(':plugin')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
