--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -21,13 +21,12 @@ gradlePlugin {
 }
 
 sourceCompatibility = 1.8
-group ext.group
-version ext.version
+group = ext.group
+version = ext.version
 
 dependencies {
     implementation gradleApi()
-    // @todo #3:30m Update nullfree version in gradle plugin
-    implementation 'com.nikialeksey:nullfree:0.0.2'
+    implementation 'com.nikialeksey:nullfree:1.0.0'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:5.2.0.201812061821-r'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
