--- a/plugin-maven/build.gradle
+++ b/plugin-maven/build.gradle
@@ -5,9 +5,9 @@ plugins {
 
 sourceCompatibility = 1.8
 group = ext.group
-version = ext.version
 
 dependencies {
+    // @todo #10:30m maven-plugin: support nulls in comparisions
     implementation 'com.nikialeksey:nullfree:1.0.0'
     implementation 'com.nikialeksey:goo:0.0.1'
     implementation 'org.apache.maven.plugin-tools:maven-plugin-annotations:3.6.0'
