--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -35,7 +35,7 @@ ext {
     siteUrl = 'https://github.com/nikialeksey/nullfree'
     gitUrl = 'https://github.com/nikialeksey/nullfree.git'
 
-    libraryVersion = version
+    libraryVersion = '1.1.0'
 
     developerId = 'nikialeksey'
     developerName = 'Alexey Nikitin'
@@ -46,40 +46,6 @@ ext {
 }
 if (project.rootProject.file('local.properties').exists()) {
     apply plugin: 'maven'
-    group = publishedGroupId
-    install {
-        repositories.mavenInstaller {
-            pom.project {
-                packaging 'jar'
-                groupId publishedGroupId
-                artifactId artifact
-
-                name libraryName
-                description libraryDescription
-                url siteUrl
-
-                licenses {
-                    license {
-                        name licenseName
-                        url licenseUrl
-                    }
-                }
-                developers {
-                    developer {
-                        id developerId
-                        name developerName
-                        email developerEmail
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
-        }
-    }
-
     apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
     apply plugin: 'maven-publish'
     publishing {
