--- a/plugin-gradle/build.gradle
+++ b/plugin-gradle/build.gradle
@@ -26,6 +26,7 @@ version = '1.1.0'
 
 dependencies {
     implementation gradleApi()
+    // @todo #2:30m Add crashing gradle when null
     implementation 'com.nikialeksey:nullfree:1.1.0'
     implementation 'com.nikialeksey:goo:0.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
